force-app/main/default/objects/Price_Snapshot__c/Price_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Price Snapshot</label>
    <pluralLabel>Price Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Price Snapshot Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>