force-app/main/default/objects/Price_Snapshot__c/fields/Aeroplanes__c.field-meta.xml
<CustomField>
    <fullName>Aeroplanes__c</fullName>
    <label>Aeroplanes</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>