force-app/main/default/objects/Price_Snapshot__c/fields/Ammunition__c.field-meta.xml
<CustomField>
    <fullName>Ammunition__c</fullName>
    <label>Ammunition</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>