force-app/main/default/objects/Price_Snapshot__c/fields/Artillery__c.field-meta.xml
<CustomField>
    <fullName>Artillery__c</fullName>
    <label>Artillery</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>