force-app/main/default/objects/Price_Snapshot__c/fields/Automobiles__c.field-meta.xml
<CustomField>
    <fullName>Automobiles__c</fullName>
    <label>Automobiles</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>