force-app/main/default/objects/Price_Snapshot__c/fields/Barrels__c.field-meta.xml
<CustomField>
    <fullName>Barrels__c</fullName>
    <label>Barrels</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>