force-app/main/default/objects/Price_Snapshot__c/fields/Canned_food__c.field-meta.xml
<CustomField>
    <fullName>Canned_food__c</fullName>
    <label>Canned food</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>