force-app/main/default/objects/Price_Snapshot__c/fields/Cattle__c.field-meta.xml
<CustomField>
    <fullName>Cattle__c</fullName>
    <label>Cattle</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>