force-app/main/default/objects/Price_Snapshot__c/fields/Cement__c.field-meta.xml
<CustomField>
    <fullName>Cement__c</fullName>
    <label>Cement</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>