force-app/main/default/objects/Price_Snapshot__c/fields/Clipper_convoy__c.field-meta.xml
<CustomField>
    <fullName>Clipper_convoy__c</fullName>
    <label>Clipper convoy</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>