force-app/main/default/objects/Price_Snapshot__c/fields/Coal__c.field-meta.xml
<CustomField>
    <fullName>Coal__c</fullName>
    <label>Coal</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>