force-app/main/default/objects/Price_Snapshot__c/fields/Coffee__c.field-meta.xml
<CustomField>
    <fullName>Coffee__c</fullName>
    <label>Coffee</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>