force-app/main/default/objects/Price_Snapshot__c/fields/Cotton__c.field-meta.xml
<CustomField>
    <fullName>Cotton__c</fullName>
    <label>Cotton</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>