force-app/main/default/objects/Price_Snapshot__c/fields/Dye__c.field-meta.xml
<CustomField>
    <fullName>Dye__c</fullName>
    <label>Dye</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>