force-app/main/default/objects/Price_Snapshot__c/fields/Electric_gear__c.field-meta.xml
<CustomField>
    <fullName>Electric_gear__c</fullName>
    <label>Electric gear</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>