force-app/main/default/objects/Price_Snapshot__c/fields/Explosives__c.field-meta.xml
<CustomField>
    <fullName>Explosives__c</fullName>
    <label>Explosives</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>