force-app/main/default/objects/Price_Snapshot__c/fields/Fabric__c.field-meta.xml
<CustomField>
    <fullName>Fabric__c</fullName>
    <label>Fabric</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>