force-app/main/default/objects/Price_Snapshot__c/fields/Fertilizer__c.field-meta.xml
<CustomField>
    <fullName>Fertilizer__c</fullName>
    <label>Fertilizer</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>