force-app/main/default/objects/Price_Snapshot__c/fields/Fish__c.field-meta.xml
<CustomField>
    <fullName>Fish__c</fullName>
    <label>Fish</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>