force-app/main/default/objects/Price_Snapshot__c/fields/Fruit__c.field-meta.xml
<CustomField>
    <fullName>Fruit__c</fullName>
    <label>Fruit</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>