force-app/main/default/objects/Price_Snapshot__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <label>Fuel</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>