force-app/main/default/objects/Price_Snapshot__c/fields/Furniture__c.field-meta.xml
<CustomField>
    <fullName>Furniture__c</fullName>
    <label>Furniture</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>