force-app/main/default/objects/Price_Snapshot__c/fields/Glass__c.field-meta.xml
<CustomField>
    <fullName>Glass__c</fullName>
    <label>Glass</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>