force-app/main/default/objects/Price_Snapshot__c/fields/Grain__c.field-meta.xml
<CustomField>
    <fullName>Grain__c</fullName>
    <label>Grain</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>