force-app/main/default/objects/Price_Snapshot__c/fields/Iron__c.field-meta.xml
<CustomField>
    <fullName>Iron__c</fullName>
    <label>Iron</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>