force-app/main/default/objects/Price_Snapshot__c/fields/Liquor__c.field-meta.xml
<CustomField>
    <fullName>Liquor__c</fullName>
    <label>Liquor</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>