force-app/main/default/objects/Price_Snapshot__c/fields/Lumber__c.field-meta.xml
<CustomField>
    <fullName>Lumber__c</fullName>
    <label>Lumber</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>