force-app/main/default/objects/Price_Snapshot__c/fields/Machine_parts__c.field-meta.xml
<CustomField>
    <fullName>Machine_parts__c</fullName>
    <label>Machine parts</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>