force-app/main/default/objects/Price_Snapshot__c/fields/Oil__c.field-meta.xml
<CustomField>
    <fullName>Oil__c</fullName>
    <label>Oil</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>