force-app/main/default/objects/Price_Snapshot__c/fields/Opium__c.field-meta.xml
<CustomField>
    <fullName>Opium__c</fullName>
    <label>Opium</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>