force-app/main/default/objects/Price_Snapshot__c/fields/Paper__c.field-meta.xml
<CustomField>
    <fullName>Paper__c</fullName>
    <label>Paper</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>