force-app/main/default/objects/Price_Snapshot__c/fields/Precious_metal__c.field-meta.xml
<CustomField>
    <fullName>Precious_metal__c</fullName>
    <label>Precious metal</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>