force-app/main/default/objects/Price_Snapshot__c/fields/Radio__c.field-meta.xml
<CustomField>
    <fullName>Radio__c</fullName>
    <label>Radio</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>