force-app/main/default/objects/Price_Snapshot__c/fields/Regular_clothes__c.field-meta.xml
<CustomField>
    <fullName>Regular_clothes__c</fullName>
    <label>Regular clothes</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>