force-app/main/default/objects/Price_Snapshot__c/fields/Rubber__c.field-meta.xml
<CustomField>
    <fullName>Rubber__c</fullName>
    <label>Rubber</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>