force-app/main/default/objects/Price_Snapshot__c/fields/Silk__c.field-meta.xml
<CustomField>
    <fullName>Silk__c</fullName>
    <label>Silk</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>