force-app/main/default/objects/Price_Snapshot__c/fields/Small_arms__c.field-meta.xml
<CustomField>
    <fullName>Small_arms__c</fullName>
    <label>Small arms</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>