force-app/main/default/objects/Price_Snapshot__c/fields/Steamer_convoy__c.field-meta.xml
<CustomField>
    <fullName>Steamer_convoy__c</fullName>
    <label>Steamer convoy</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>