force-app/main/default/objects/Price_Snapshot__c/fields/Steel__c.field-meta.xml
<CustomField>
    <fullName>Steel__c</fullName>
    <label>Steel</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>