force-app/main/default/objects/Price_Snapshot__c/fields/Sulphur__c.field-meta.xml
<CustomField>
    <fullName>Sulphur__c</fullName>
    <label>Sulphur</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>