force-app/main/default/objects/Price_Snapshot__c/fields/Tea__c.field-meta.xml
<CustomField>
    <fullName>Tea__c</fullName>
    <label>Tea</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>