force-app/main/default/objects/Price_Snapshot__c/fields/Telephones__c.field-meta.xml
<CustomField>
    <fullName>Telephones__c</fullName>
    <label>Telephones</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>