force-app/main/default/objects/Price_Snapshot__c/fields/Timber__c.field-meta.xml
<CustomField>
    <fullName>Timber__c</fullName>
    <label>Timber</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>