force-app/main/default/objects/Price_Snapshot__c/fields/Tobacco__c.field-meta.xml
<CustomField>
    <fullName>Tobacco__c</fullName>
    <label>Tobacco</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>