force-app/main/default/objects/Price_Snapshot__c/fields/Tropical_wood__c.field-meta.xml
<CustomField>
    <fullName>Tropical_wood__c</fullName>
    <label>Tropical wood</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>