force-app/main/default/objects/Price_Snapshot__c/fields/Wine__c.field-meta.xml
<CustomField>
    <fullName>Wine__c</fullName>
    <label>Wine</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>