force-app/main/default/objects/Price_Snapshot__c/fields/Wool__c.field-meta.xml
<CustomField>
    <fullName>Wool__c</fullName>
    <label>Wool</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>